cli/crates/core/tests/snapshots/test_analyzer__analyze_custom_alias.snap
---
source: crates/core/tests/test_analyzer.rs
expression: "&component_results"
---
num_of_components: 2
components:
  - definition_id: "custom-alias:e4b98a7939aedea0377e98e6254ac710a4b3d00f240b13d6bb2dd9d394e35204:App"
    name: App
    export_ids:
      - "custom-alias:src/App:App"
    package_name: custom-alias
    source_path: src/App.tsx
    dependencies:
      - from: "custom-alias:e4b98a7939aedea0377e98e6254ac710a4b3d00f240b13d6bb2dd9d394e35204:App"
        to: "custom-alias:434eeb01d71a4fec29d8982d83064deb2b42aac4ac37a91efc81d74c816a11d4:Button"
        references:
          - trace:
              - "custom-alias:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:Button"
              - "custom-alias:434eeb01d71a4fec29d8982d83064deb2b42aac4ac37a91efc81d74c816a11d4:Button"
            usages:
              - start:
                  line: 8
                  column: 13
                end:
                  line: 8
                  column: 23
                props: []
    props: []
    html_elements: []
  - definition_id: "custom-alias:434eeb01d71a4fec29d8982d83064deb2b42aac4ac37a91efc81d74c816a11d4:Button"
    name: Button
    export_ids:
      - "custom-alias:src/components/Button:Button"
      - "custom-alias:src/components:Button"
    package_name: custom-alias
    source_path: src/components/Button.tsx
    dependencies: []
    props: []
    html_elements:
      - button

