cli/crates/core/tests/snapshots/test_analyzer__analyze_monorepo_with_nested_packages-2.snap
---
source: crates/core/tests/test_analyzer.rs
expression: "&export_results"
---
num_of_exports: 3
exports:
  - name: App
    source_path: app/src/App.tsx
    is_component: true
    inferred_type: (Function -> JSX)
    resolved_type: (Function -> JSX)
    trace_to_declaration:
      - "app:8abd0cccac7d9db5a9857472f7c028f41df596f82257ba862e78cf18e370a407:App"
  - name: Button
    source_path: app/ds/src/Button.tsx
    is_component: true
    inferred_type: (Function -> JSX)
    resolved_type: (Function -> JSX)
    trace_to_declaration:
      - "ds:55dd9644557b21f16b2e6dd06b132f93e917b51b91f7986016cb01d22b47708e:Button"
  - name: Button
    source_path: app/ds/src/index.ts
    is_component: true
    inferred_type: (Function -> JSX)
    resolved_type: (Function -> JSX)
    trace_to_declaration:
      - "ds:90068ecdc4c2ae98d5b203322a13733548951b02637d54ae64edd814cb1c90f3:Button"
      - "ds:55dd9644557b21f16b2e6dd06b132f93e917b51b91f7986016cb01d22b47708e:Button"

