cli/crates/core/tests/snapshots/test_analyzer__analyze_multi_project-3.snap
---
source: crates/core/tests/test_analyzer.rs
expression: "&component_results_webapp"
---
num_of_components: 6
components:
  - definition_id: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Button"
    name: Button
    export_ids: []
    package_name: "@acme/design-system"
    source_path: ""
    dependencies: []
    props: []
    html_elements: []
    html_element_usages: []
  - definition_id: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:DatePicker"
    name: DatePicker
    export_ids: []
    package_name: "@acme/design-system"
    source_path: ""
    dependencies: []
    props: []
    html_elements: []
    html_element_usages: []
  - definition_id: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Input"
    name: Input
    export_ids: []
    package_name: "@acme/design-system"
    source_path: ""
    dependencies: []
    props: []
    html_elements: []
    html_element_usages: []
  - definition_id: "@acme/webapp:f2cd6bd7313b24013cd04d20b4dadb413f898c07f7c1a46ecc971d28d719accd:App"
    name: App
    export_ids:
      - "@acme/webapp:.:App"
      - "@acme/webapp:src/app:App"
    package_name: "@acme/webapp"
    source_path: src/app.tsx
    dependencies:
      - from: "@acme/webapp:f2cd6bd7313b24013cd04d20b4dadb413f898c07f7c1a46ecc971d28d719accd:App"
        to: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Input"
        references:
          - trace:
              - "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Input"
            usages:
              - start:
                  line: 6
                  column: 54
                end:
                  line: 6
                  column: 62
                props: []
      - from: "@acme/webapp:f2cd6bd7313b24013cd04d20b4dadb413f898c07f7c1a46ecc971d28d719accd:App"
        to: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:RightPanel"
        references:
          - trace:
              - "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:RightPanel"
            usages:
              - start:
                  line: 6
                  column: 29
                end:
                  line: 6
                  column: 42
                props: []
      - from: "@acme/webapp:f2cd6bd7313b24013cd04d20b4dadb413f898c07f7c1a46ecc971d28d719accd:App"
        to: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:SearchBar"
        references:
          - trace:
              - "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:SearchBar"
            usages:
              - start:
                  line: 6
                  column: 42
                end:
                  line: 6
                  column: 54
                props: []
    props: []
    html_elements:
      - div
      - h1
    html_element_usages:
      - tag: div
        count: 1
        spans:
          - "6:12-6:68"
      - tag: h1
        count: 1
        spans:
          - "6:17-6:29"
  - definition_id: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:RightPanel"
    name: RightPanel
    export_ids:
      - "@acme/webapp:src/components:RightPanel"
    package_name: "@acme/webapp"
    source_path: src/components.tsx
    dependencies:
      - from: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:RightPanel"
        to: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:DatePicker"
        references:
          - trace:
              - "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:DatePicker"
            usages:
              - start:
                  line: 7
                  column: 37
                end:
                  line: 7
                  column: 50
                props: []
      - from: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:RightPanel"
        to: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Input"
        references:
          - trace:
              - "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Input"
            usages:
              - start:
                  line: 7
                  column: 50
                end:
                  line: 7
                  column: 58
                props: []
    props: []
    html_elements:
      - div
      - h1
    html_element_usages:
      - tag: div
        count: 1
        spans:
          - "7:12-7:64"
      - tag: h1
        count: 1
        spans:
          - "7:17-7:37"
  - definition_id: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:SearchBar"
    name: SearchBar
    export_ids:
      - "@acme/webapp:src/components:SearchBar"
    package_name: "@acme/webapp"
    source_path: src/components.tsx
    dependencies:
      - from: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:SearchBar"
        to: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Button"
        references:
          - trace:
              - "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Button"
            usages:
              - start:
                  line: 11
                  column: 44
                end:
                  line: 11
                  column: 53
                props: []
      - from: "@acme/webapp:44145b4646ba00cf3afdd124b880a23f47279f07dad0d139a7b26cd531123cf3:SearchBar"
        to: "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Input"
        references:
          - trace:
              - "@acme/design-system:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855:Input"
            usages:
              - start:
                  line: 11
                  column: 36
                end:
                  line: 11
                  column: 44
                props: []
    props: []
    html_elements:
      - div
      - h1
    html_element_usages:
      - tag: div
        count: 1
        spans:
          - "11:12-11:59"
      - tag: h1
        count: 1
        spans:
          - "11:17-11:36"

